# AIstudio

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  EngStudio.md  IMPLEMENTATION_PLAN.md  Makefile  PROMPT.md  README.md  ROADMAP.md  auto_push.bat  claude-proxy.js  dataflow-audit.md  docker-compose.yml  docs架构.txt  launch_backend.bat  launch_engine.bat  launch_frontend.bat  package-lock.json  push.bat  silu.md  stop_services.bat  test_run.bat  架构.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.workbuddy/memory/: 2026-07-07.md
Backend/: README.md  aistudio.db  go.mod  go.sum
Backend/cmd/: main.go
Backend/config/: README.md  default.yaml  mcp.json  production.yaml
Config/: app.yaml  backend.yaml  engine.yaml  plugin.yaml
Docs/: DEVELOPER.md  PROJECT_STRUCTURE.md  QUICKSTART.md
Docs/ADR/: ADR-001-compiler-architecture.md  ADR-001-workflow-single-source-of-truth.md  ADR-002-compiler-first-architecture.md  (+9 more)
Engine/: README.md  demo.py  main.py  pyproject.toml  requirements.txt  runner.py  server.py  task.json  task_router.py
Engine/dataset/: __init__.py  converter.py  preprocessor.py  reader.py  splitter.py
Engine/examples/: task_demo.json
Engine/grpc/: server.py
Engine/handlers/: __init__.py
Engine/handlers/nlp/: __init__.py  handler.py
Engine/handlers/timeseries/: __init__.py  handler.py
Engine/handlers/vision/: __init__.py  handler.py
Engine/inference/: __init__.py  base_inference.py  batch_inference.py  realtime_inference.py
Engine/manager/: model_manager.py
Engine/model/: __init__.py  loader.py
Engine/proto/: aiengine.proto  aiengine_pb2.py  aiengine_pb2_grpc.py
Engine/result/: __init__.py  exporter.py  metrics.py  model_export.py
Engine/runtime/: __init__.py  env_detector.py
Engine/sdk/: __init__.py  logger.py
Engine/trainer/: __init__.py  base_trainer.py  checkpoint.py  early_stop.py  epoch_manager.py
Engine/vision/: __init__.py
Engine/vision/yolo/: __init__.py  config.py  predict.py  train.py
Frontend/: index.html  package-lock.json  package.json  start-dev.bat  vite.config.ts
Frontend/src-tauri/: Cargo.toml  tauri.conf.json
Frontend/src-tauri/src/: main.rs
Launcher/: build.bat  config.go  go.mod  health.go  logger.go  main.go  process.go  quick-build.bat  service.go  shutdown.go
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
examples/: yolo_train.json
templates/: README.md
(+590 files in other folders)
