[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aistudio-engine"
version = "2.0.0"
description = "AI Studio Engine - Pure Python AI algorithm library"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["ai", "machine-learning", "yolo", "pytorch"]

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "ultralytics>=8.0.0",
    "PyYAML>=6.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
export = [
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "onnxsim>=0.4.0",
    "safetensors>=0.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "sdk*",
    "vision*",
    "dataset*",
    "trainer*",
    "inference*",
    "result*",
    "runtime*",
    "model*",
]
